# Kith-Kin

./: .env.example  .gitignore  .no-mistakes.yaml  AGENTS.md  README.md  docker-compose.yml  handover.md
backend/: .env.example  agents-cli-manifest.yaml  alembic.ini  kithkin.db-shm  kithkin.db-wal  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_confirmation_outcome.py  0003_add_drug_knowledge.py  ad2e9b6dd006_retention_metadata.py
backend/app/: __init__.py  agent.py  deterministic_main.py  main.py
backend/app/adapters/: __init__.py  app_websocket_ticket_issuer.py  fake_live_adapter.py  gemini_live_adapter.py  gemini_live_translate_adapter.py  gemini_text_adapter.py  gemini_tts_adapter.py  mcp_tool_adapter.py  notification_adapter.py  provider_schemas.py
backend/app/agents/: __init__.py  card_proposal_materializer.py  companion_agent.py  guardian_agent.py  orchestrator_agent.py  router_agent.py
backend/app/api/: dependencies.py  error_handlers.py
backend/app/core/: config.py  constants.py  conversation_debug.py  errors.py
backend/app/data/: drug_knowledge.py
backend/app/db/: base.py  session.py
backend/app/domain/: __init__.py  confirmation.py  credentials.py  live_validation.py  rag.py  response_card.py  safety_policy.py  session.py
backend/app/mcp_servers/: memory_server.py
backend/app/repositories/: __init__.py  confirmation_repository.py  drug_knowledge_repository.py  (+9 more)
backend/scripts/: __init__.py  convert_dataset.py  validate_live_transcription.py
backend/tests/: conftest.py
(+230 files in other folders)
