[project]
name = "kithkin-backend"
version = "0.1.0"
description = "Kith&Kin local-first pharmacy companion backend"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "google-adk>=2.1,<3",
  "google-genai>=1.0,<2",
  "mcp>=1.0,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["google.adk.*", "mcp.*"]
ignore_missing_imports = true
